--- a/MagicCollection/MagicCollection.vcxproj
+++ b/MagicCollection/MagicCollection.vcxproj
@@ -155,6 +155,7 @@
   <ItemGroup>
     <ClCompile Include="Action.cpp" />
     <ClCompile Include="AddAction.cpp" />
+    <ClCompile Include="AddFromAction.cpp" />
     <ClCompile Include="Addresser.cpp" />
     <ClCompile Include="ChangeAction.cpp" />
     <ClCompile Include="CollectionDeltaClass.cpp" />
@@ -193,6 +194,7 @@
   <ItemGroup>
     <ClInclude Include="Action.h" />
     <ClInclude Include="AddAction.h" />
+    <ClInclude Include="AddFromAction.h" />
     <ClInclude Include="Addresser.h" />
     <ClInclude Include="ChangeAction.h" />
     <ClInclude Include="CollectionDeltaClass.h" />
