--- a/StoreFrontPro/StoreFrontPro.csproj
+++ b/StoreFrontPro/StoreFrontPro.csproj
@@ -57,8 +57,8 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="Server\CardModel.cs" />
+    <Compile Include="Server\CardModelStatic.cs" />
     <Compile Include="Server\CollectionModel.cs" />
-    <Compile Include="Server\CollectionModelStatic.cs" />
     <Compile Include="Server\SSICardInterface.cs" />
     <Compile Include="Server\SSICollectionInterface.cs" />
     <Compile Include="Server\SSIServer.cs" />
@@ -76,6 +76,7 @@
     </Compile>
     <Compile Include="Support\MultiDisplay\VCIMultiDisplay.cs" />
     <Compile Include="Tools\Extensions.cs" />
+    <Compile Include="Views\MVVM\BasicModel.cs" />
     <Compile Include="Views\CollectionsOverview\VCICollectionsOverview.cs" />
     <Compile Include="Views\CollectionsOverview\VCollectionsOverview.xaml.cs">
       <DependentUpon>VCollectionsOverview.xaml</DependentUpon>
@@ -135,6 +136,7 @@
     <Compile Include="Views\Components\VCCollectionsMenuList.xaml.cs">
       <DependentUpon>VCCollectionsMenuList.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Views\MVVM\IModel.cs" />
     <Compile Include="Views\Interfaces\CollectionChanger\MCollectionEditorItem.cs" />
     <Compile Include="Views\Interfaces\CollectionChanger\VCICollectionEditor.cs" />
     <Compile Include="Views\Interfaces\CollectionChanger\VCollectionEditor.xaml.cs">
@@ -148,7 +150,10 @@
     <Compile Include="Views\IVCISupporter.cs" />
     <Compile Include="Views\IViewComponent.cs" />
     <Compile Include="Views\IViewComponentInterface.cs" />
-    <Compile Include="Views\ViewModel.cs" />
+    <Compile Include="Views\MVVM\IViewModel.cs" />
+    <Compile Include="Views\ViewClass.cs" />
+    <Compile Include="Views\ViewFactory.cs" />
+    <Compile Include="Views\MVVM\ViewModel.cs" />
     <Compile Include="VMStoreFront.cs" />
   </ItemGroup>
   <ItemGroup>
